# jrserial

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.md  build.gradle.kts  docker-test.sh  gradle.properties  run-hardware-test.sh  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build-reusable.yml  build.yml  release.yml
examples/: AdvancedExample.java  README.md  StreamExample.java
gradle/: libs.versions.toml
hardware-test/: build.gradle.kts
hardware-test/src/main/java/dev/nemecec/jrserial/hwtest/: Rs485TestApp.java  Rs485TestServer.java
hardware-test/src/test/java/dev/nemecec/jrserial/hwtest/: RemoteTestController.java  Rs485HardwareTest.java  SshConnectionTest.java  SshExecutor.java  TestConfig.java
hardware-test/src/test/resources/: rs485-test-config.example.yaml
kotlin/: README.md  build.gradle.kts
kotlin/src/main/kotlin/dev/nemecec/jrserial/kotlin/: SerialPortCoroutines.kt  SerialPortDsl.kt  SerialPortFlow.kt  (+1 more)
native/: Cargo.toml  Cross.toml
native/src/: lib.rs  platform_linux.rs  platform_other.rs
src/main/java/dev/nemecec/jrserial/: DataBits.java  FlowControl.java  NativeLibraryLoader.java  NativeSerialPort.java  Parity.java  Rs485Config.java  Rs485ControlPin.java  SerialPort.java  SerialPortInfo.java  StopBits.java
src/test/java/dev/nemecec/jrserial/: EnumTest.java  NativeLibraryLoaderTest.java  Rs485Test.java  SerialPortTest.java  VirtualSerialPortTest.java
src/testFixtures/java/dev/nemecec/jrserial/: VirtualSerialPortSupport.java
test-app/: README.md  build.gradle.kts
(+8 files in other folders)
