[package]
name = "jrserial"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
# Disable default features to exclude libudev (required for cross-compilation to ARM)
serialport = { version = "4.3", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
